[gd_scene load_steps=6 format=3 uid="uid://dtog7uqp4b56o"]

[ext_resource type="Texture2D" uid="uid://c6c0r5tq2sjsy" path="res://towers/drifter/drifter_l3000.png" id="1_cfm1h"]
[ext_resource type="Script" path="res://towers/drifter/drifter.gd" id="1_hlqk7"]
[ext_resource type="PackedScene" uid="uid://buh17iad18xi" path="res://projectiles/beam/Beam.tscn" id="2_cvymb"]

[sub_resource type="CanvasTexture" id="CanvasTexture_pt7w1"]
diffuse_texture = ExtResource("1_cfm1h")
normal_texture = ExtResource("1_cfm1h")
specular_texture = ExtResource("1_cfm1h")

[sub_resource type="CircleShape2D" id="CircleShape2D_dix1c"]
radius = 300.0

[node name="Drifter" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_hlqk7")
projectile_type = ExtResource("2_cvymb")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(5.96046e-08, -69)
scale = Vector2(0.7, 0.7)
texture = SubResource("CanvasTexture_pt7w1")

[node name="AttackCDTimer" type="Timer" parent="."]

[node name="AttackRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange"]
shape = SubResource("CircleShape2D_dix1c")

[node name="AttackPoint" type="Marker2D" parent="."]
position = Vector2(57, -85)

[connection signal="timeout" from="AttackCDTimer" to="." method="_on_attack_cd_timer_timeout"]
